chapt5/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  selector:
    app: kubia
  ports:
  - port: 80
