chapt5/kubia-svc-affinity-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-affinity-ip
spec:
  sessionAffinity: ClientIP
  selector:
    app: kubia
  ports:
  - port: 80
    targetPort: 8080
